--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "@write-with-laika/drama-engine",
   "version": "1.1.0",
   "description": "A library for agent orchestration",
-  "main": "index.js",
-  "directories": {
-    "example": "examples"
-  },
+  "main": "./dist/drama.ts",
+  "module": "./dist/drama.mjs",
+  "types": "./dist/drama.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsup",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -33,7 +36,13 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/uuid": "^10.0.0"
+    "@types/jest": "^29.5.12",
+    "@types/uuid": "^10.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
+    "tsup": "^8.1.0",
+    "typescript": "^5.5.3"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
