allow turning off logging

--- a/.env.template
+++ b/.env.template
@@ -16,6 +16,6 @@ DE_ENDPOINT_URL='/v1/completions'
 DE_BACKEND_API_KEY='1234567890'
 
 # This optional variable sets the log level for the application. Default: 'info'
-# Case insenstive. Options: debug, info, warn, error
+# Case insenstive. Options: debug, info, warn, error, off
 # For convenience, NEXT_PUBLIC_DE_LOG_LEVEL can also be used and is checked by default.
 DE_LOG_LEVEL='error'
