--- a/.env.template
+++ b/.env.template
@@ -1,21 +1,23 @@
 # This optional variable sets the base URL for the LLM Backend API.
 # It is used as a prefix for all API endpoints.
-# For convenience, NEXT_PUBLIC_DE_BASE_URL can also be used and is checked by default.
 DE_BASE_URL='https://my-llm-backend.url/api'
+# OR
+# NEXT_PUBLIC_DE_BASE_URL='https://my-llm-backend.url/api'
 
 # This optional variable sets the endpoint URL for the LLM Backend API.
 # It specifies the specific API endpoint that we will be interacting with.
-# For convenience, NEXT_PUBLIC_DE_ENDPOINT_URL can also be used and is checked by default.
 DE_ENDPOINT_URL='/v1/completions'
+# OR
+# NEXT_PUBLIC_DE_ENDPOINT_URL='/v1/completions'
 
 # This optional variable sets the API key for the LLM Backend API.
 # It is used to authenticate our requests to the API.
-# NOTE: Unlike other variables, NEXT_PUBLIC_DE_BACKEND_API_KEY is NOT checked by default
-# as it's a bad security practice to expose API keys in the client side or to the browser.
-# Expose and use at your own discretion.
 DE_BACKEND_API_KEY='1234567890'
+# OR
+# NEXT_PUBLIC_DE_BACKEND_API_KEY='1234567890'
 
 # This optional variable sets the log level for the application. Default: 'info'
-# Case insenstive. Options: debug, info, warn, error, off
-# For convenience, NEXT_PUBLIC_DE_LOG_LEVEL can also be used and is checked by default.
+# Case insenstive otions: debug, info, warn, error, off
 DE_LOG_LEVEL='error'
+# OR
+# NEXT_PUBLIC_DE_LOG_LEVEL='error'
